# 3d-map-simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  renderer.cpp  terrain.cpp  terrain.h
include/: buildings.h  helper_functions.h  imageloader.h  objects.h  renderer.h  terrain.h  variables.h  vec3f.h
include/3d_map_simulator/: renderer.h  terrain.h  vec3f.h
src/: imageloader.cpp  main.cpp  renderer.cpp  terrain.cpp  tmp.cpp  vec3f.cpp
tmp/: Makefile  main.cpp  terrain  vec3f.cpp
